--- a/src/app/newpost/newpost.component.html
+++ b/src/app/newpost/newpost.component.html
@@ -5,8 +5,8 @@
       <small id="titleHelp" class="form-text text-muted">Entrer un titre ou un sujet pour votre commentaire</small>
     </div>
     <div class="form-group">
-      <label for="comment">Password</label>
-      <textarea id="comment" class="form-control" cols="30" rows="10" formControlName="comment"></textarea>
+      <label for="comment">Commentaire</label>
+      <textarea id="comment" class="form-control" cols="30" rows="10" formControlName="comment" required></textarea>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary" [disabled]="newPostForm.invalid">Submit</button>
   </form>
